@@ -316,6 +316,10 @@ https://github.com/networkupstools/nut/milestone/11
  - upslog:
    * Added support for limiting the loop count. Using in NIT (NUT Integration
      Test) suite for double profit (checking the tool and fallback in NIT).
+   * If you use the legacy CLI options for single-system logging (`-s <system>`
+     and `-l <logfile>`) along with newer tuple(s) for multiple-system logging
+     (repeatable `-m <system,logfile>`), previously the single-system options
+     were overridden by the tuple(s); now they become part of the list.
    * Added systemd and SMF service integration. [#1803]
 
  - More systemd integration:
